--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
     "expo": "~54.0.23",
+    "expo-auth-session": "^7.0.8",
+    "expo-crypto": "^15.0.7",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.9",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
@@ -27,6 +33,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-worklets": "0.5.1",
+    "undefined": "expo-auth-session/providers/google",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
