--- a/eas.json
+++ b/eas.json
@@ -6,17 +6,47 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "EXPO_PUBLIC_ANDROID_CLIENT_ID": "$ANDROID_CLIENT_ID",
+        "EXPO_PUBLIC_WEB_CLIENT_ID": "$WEB_CLIENT_ID"
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "EXPO_PUBLIC_ANDROID_CLIENT_ID": "$ANDROID_CLIENT_ID",
+        "EXPO_PUBLIC_WEB_CLIENT_ID": "$WEB_CLIENT_ID"
       }
     },
     "production": {
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "EXPO_PUBLIC_ANDROID_CLIENT_ID": "$ANDROID_CLIENT_ID",
+        "EXPO_PUBLIC_WEB_CLIENT_ID": "$WEB_CLIENT_ID"
       }
     }
   },
