--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
-    "expo": "~54.0.23",
-    "expo-auth-session": "^7.0.8",
+    "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
     "expo-crypto": "^15.0.7",
-    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
-    "expo-notifications": "^0.32.12",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
     "firebase": "^12.6.0",
