--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
       "@/*": [
         "./src/*"
       ],
-      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+      "@firebase/auth": [
+        "./node_modules/@firebase/auth/dist/index.rn.d.ts"
+      ]
     },
     "types": [
       "react-native"
